--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "eofol4",
-  "description": "All-inclusive blazingly fast reactive web framework with zero configuration, batteries included!",
   "version": "4.0.0",
-  "main": "index.js",
+  "description": "All-inclusive blazingly fast reactive web framework with zero configuration, batteries included!",
+  "keywords": [],
+  "main": "./src/index.js",
   "scripts": {
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "serve": "node ./scripts/serve.js",
     "clean": "node ./scripts/clean.js"
+  },
+  "dependencies": {
+    "hex-to-css-filter": "^5.4.0"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
