--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "4.0.0",
   "description": "All-inclusive blazingly fast reactive web framework with zero configuration, batteries included!",
   "keywords": [],
-  "main": "./src/index.js",
   "scripts": {
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "serve": "node ./scripts/serve.js",
-    "clean": "node ./scripts/clean.js"
+    "clean": "node ./scripts/clean.js",
+    "build-serve": "npm run build && npm run serve",
+    "check": "npx eslint -c eslint.config.mjs .",
+    "check-fix": "npx eslint -c eslint.config.mjs --fix .",
+    "prettify": "npx prettier --config .prettierrc --write .",
+    "lint": "npm run check-fix && npm run prettify"
   },
   "dependencies": {
     "hex-to-css-filter": "^5.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
     "rimraf": "^6.0.1",
+    "typescript-eslint": "^8.1.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
