--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "globals": "^15.9.0",
     "prettier": "3.3.3",
     "rimraf": "^6.0.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
