Add reinstall and deploy scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "check": "npx eslint -c eslint.config.mjs .",
     "check-fix": "npx eslint -c eslint.config.mjs --fix .",
     "prettify": "npx prettier --config .prettierrc --write .",
-    "lint": "npm run check-fix && npm run prettify"
+    "lint": "npm run check-fix && npm run prettify",
+    "reinstall": "node ./scripts/reinstall.js",
+    "deploy": "npm run build && call c:/code/eofol4-deploy.bat"
   },
   "dependencies": {
     "hex-to-css-filter": "^5.4.0"
