--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "dependencies": {
     "cross-spawn": "^7.0.3",
+    "dotenv": "^16.4.5",
     "hex-to-css-filter": "^5.4.0",
+    "html-minifier-terser": "^7.2.0",
     "html-to-json-parser": "^2.0.1",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
+    "uglify-js": "^3.19.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
