--- a/package.json
+++ b/package.json
@@ -16,25 +16,28 @@
     "analyze": "node ./scripts/analyze.js 1",
     "reinstall": "node ./scripts/reinstall.js",
     "reinstall-force": "node ./scripts/reinstall.js -f",
-    "deploy": "npm run build && call c:/code/eofol4-deploy.bat",
+    "smoke-test": "node ./scripts/smoke-test.js",
+    "deploy": "npm run build && call c:/code/eofol4-deploy.bat && npm run smoke-test",
     "docker-build": "docker build -t eofol4-test ./docker-test",
     "docker-run": "docker run -p 3000:3000 eofol4-test",
     "docker-stop": "bash ./docker-test/docker-stop.sh",
     "docker-test": "npm run docker-stop && npm run docker-build && npm run docker-run"
   },
   "dependencies": {
+    "chalk": "2.4.2",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.4.5",
     "hex-to-css-filter": "^5.4.0",
     "html-minifier-terser": "^7.2.0",
     "html-to-json-parser": "^2.0.1",
+    "less": "^4.2.0",
     "rimraf": "^6.0.1",
+    "sharp": "^0.33.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "uglify-js": "^3.19.0",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "watchpack": "^2.4.2",
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
