--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettify": "npx prettier --config .prettierrc --write .",
     "lint": "npm run check-fix && npm run prettify",
     "analyze": "node ./scripts/analyze.js 1",
+    "analyze-bundle": "npm run build -- --analyze",
     "reinstall": "node ./scripts/reinstall.js",
     "reinstall-force": "node ./scripts/reinstall.js -f",
     "smoke-test": "node ./scripts/smoke-test.js",
@@ -48,7 +49,8 @@
     "jest": "^29.7.0",
     "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
-    "typescript-eslint": "^8.1.0"
+    "typescript-eslint": "^8.1.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "author": "wurducius@gmail.com",
   "bugs": "https://github.com/wurducius/eofol4/issues",
