--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-to-json-parser": "^2.0.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
+    "svgo": "^3.3.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "uglify-js": "^3.19.0",
