Add Lighthouse test script and refactor image processing options

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "analyze-bundle": "npm run build -- --analyze",
     "reinstall": "node ./scripts/reinstall.js",
     "reinstall-force": "node ./scripts/reinstall.js -f",
-    "smoke-test": "node ./scripts/smoke-test.js",
-    "deploy": "npm run build && call c:/code/eofol4-deploy.bat && npm run smoke-test",
+    "test-smoke": "node scripts/test-smoke.js",
+    "test-lighthouse": "node scripts/test-lighthouse.js 10",
+    "deploy": "npm run build && call c:/code/eofol4-deploy.bat && npm run test-smoke && npm run test-lighthouse",
     "docker-build": "docker build -t eofol4-test ./docker-test",
     "docker-run": "docker run -p 3000:3000 eofol4-test",
     "docker-stop": "bash ./docker-test/docker-stop.sh",
