--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.7.2",
     "chalk": "2.4.2",
     "cross-spawn": "^7.0.3",
+    "csstype": "^3.1.3",
     "dotenv": "^16.4.5",
     "hex-to-css-filter": "^5.4.0",
     "html-minifier-terser": "^7.2.0",
