--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "All-inclusive blazingly fast reactive web framework with zero configuration, batteries included!",
   "keywords": [],
   "scripts": {
-    "start": "node ./scripts/start.js",
-    "build": "node ./scripts/build.js",
+    "start": "node ./scripts/clean-tsc.js && node ./scripts/tsc.js && node ./scripts/start.js",
+    "build": "node ./scripts/clean-tsc.js && node ./scripts/tsc.js && node ./scripts/build.js",
     "serve": "node ./scripts/serve.js",
     "clean": "node ./scripts/clean.js",
     "test": "jest",
