Extract clean-tsc and compile-tsc to one precompile script

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "All-inclusive blazingly fast reactive web framework with zero configuration, batteries included!",
   "keywords": [],
   "scripts": {
-    "start": "node ./scripts/clean-tsc.js && node ./scripts/tsc.js && node ./scripts/start.js",
-    "build": "node ./scripts/clean-tsc.js && node ./scripts/tsc.js && node ./scripts/build.js",
+    "start": "npm run precompile && node ./scripts/start.js",
+    "build": "npm run precompile && node ./scripts/build.js",
     "serve": "node ./scripts/serve.js",
     "clean": "node ./scripts/clean.js",
     "test": "jest",
+    "precompile": "node ./scripts/precompile.js",
     "check": "npx eslint -c eslint.config.mjs .",
     "check-fix": "npx eslint -c eslint.config.mjs --fix .",
     "prettify": "npx prettier --config .prettierrc --write .",
