--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cross-spawn": "^7.0.3",
     "csstype": "^3.1.3",
     "dotenv": "^16.4.5",
-    "hex-to-css-filter": "^5.4.0",
+    "eofol-live-server": "^1.2.4",
     "html-minifier-terser": "^7.2.0",
     "html-to-json-parser": "^2.0.1",
     "rimraf": "^6.0.1",
@@ -43,20 +43,19 @@
     "typescript": "^5.5.4",
     "uglify-js": "^3.19.0",
     "watchpack": "^2.4.2",
-    "webpack": "^5.93.0"
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
-    "eofol-live-server": "^1.2.4",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
-    "typescript-eslint": "^8.1.0",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "typescript-eslint": "^8.1.0"
   },
   "author": "wurducius@gmail.com",
   "bugs": "https://github.com/wurducius/eofol4/issues",
