Extract test-deploy script

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test-smoke": "node scripts/test-smoke.js",
     "test-lighthouse": "node scripts/test-lighthouse.js 10",
     "test-lighthouse-max": "node scripts/test-lighthouse.js 100",
-    "deploy": "npm run build -- --prod && call deploy/eofol4-deploy.bat && npm run test-smoke && npm run test-lighthouse",
+    "test-deploy": "npm run test-smoke && npm run test-lighthouse",
+    "deploy": "npm run build -- --prod && call deploy/eofol4-deploy.bat && npm run test-deploy",
     "docker-build": "docker build -t eofol4-test ./docker-test",
     "docker-run": "docker run -p 3000:3000 eofol4-test",
     "docker-stop": "bash ./docker-test/docker-stop.sh",
